--- a/src/index.css
+++ b/src/index.css
@@ -38,4 +38,15 @@ html{
 }
 :root{
   font-size: 100%;
-} 
+
+  --bg-c-primary : #000;
+  --bg-c-secondary: #fff;
+  --bg-c-tertiary: #9C27F7;
+  --bg-c-tertiary-h: #B188E6;
+  --f-c-primary : #fff;
+  --f-c-tertiary: #858585;
+}
+body{
+  font-family: "Open Sans", sans-serif;
+  color: var(--f-c-primary)
+}
