--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,8 @@ html{
   --bg-c-tertiary: #9C27F7;
   --bg-c-tertiary-h: #B188E6;
   --f-c-primary : #fff;
-  --f-c-tertiary: #858585;
+  --f-c-tertiary: #9C27F7;
+  --f-c-cuaternary: #858585;
   --f-c-error: #E66868;
 }
 body{
