--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -71,7 +71,7 @@
     background-color: var(--bg-c-tertiary-h) ;
 }
 .Login-span{
-    color: var(--f-c-tertiary);
+    color: var(--f-c-cuaternary);
 }
 .Login-btn{
     margin: 8px 0 0;
