--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -66,7 +66,21 @@
     background-color: var(--bg-c-tertiary-h) ;
 }
 .Signup-span{
+    color: var(--f-c-cuaternary);
+}
+.Back-btn{
+    background-color: var(--bg-c-secondary);
     color: var(--f-c-tertiary);
+    width: 100%;
+    padding: .5rem 5rem;
+    border-radius: .5rem;
+    cursor: pointer;
+    transition: background-color .5s ease , color .5s ease;
+}
+.Back-btn:hover{
+    color: var(--f-c-primary);
+    background-color:var(--bg-c-tertiary-h);
+
 }
 .Login-picture{
     height: 100%;
