--- a/src/components/PlayMovieBtn/PlayMovieBtn.css
+++ b/src/components/PlayMovieBtn/PlayMovieBtn.css
@@ -9,6 +9,7 @@
     padding: .625rem 1rem;
     border-radius: 8px;
     font-size: 14px;
+    cursor: pointer;
 }
 .Btn-play--svg{
     width: 1.25rem;
