--- a/src/pages/Movie/Movie.css
+++ b/src/pages/Movie/Movie.css
@@ -84,47 +84,27 @@
     object-fit: cover;
     filter: brightness(0.6);
 }
-.Info{
-    width: 100%;
+.Info-chevron{
+    position: absolute;
+    bottom: 0;
+    left: calc((50% - 5rem));
+    width: 7rem;
+    animation: bounce 2s linear infinite;
+    cursor: pointer;
+    filter: drop-shadow(0px .5rem .5rem rgba(0, 0, 0, 0.5));
 }
-.Info-ul{
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 2.75rem;
-}
-.Info-li{
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 1rem
-}
-.SubInfo-ul{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 0 0 1.5rem;
-}
-.SubInfo-li{
-    padding: .375rem 0 0;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    text-transform: capitalize;
-}
-.SubInfo-li::after{
-    content: "";
-    display: inline-block;
-    width: 3px;
-    height: 3px;
-    border-radius: 50%;
-    margin: 0 .5rem;
-    background-color: var(--bg-c-secondary);
-}
-.SubInfo-li:last-child::after{
-    display: none;
+@keyframes bounce {
+    0%,
+    25%,
+    50%,
+    75%,
+    100% {
+        transform: translateY(0);
+    }
+    35% {
+        transform: translateY(1.8rem);
+    }
+    65% {
+        transform: translateY(.8rem);
+    }
 }
