adding logo font

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,6 +11,8 @@
 }
 .Logo-h1{
     font-size: 2rem;
+    font-family:"Back to Black Bold Demo";
+    color: var(--f-c-tertiary);
 }
 .Nav{
     display: flex;
