--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family:"Back to Black Bold Demo";
+  src: url("./fonts/Back_to_Black_Bold_Demo.eot?") format("eot"), url("./fonts/Back_to_Black_Bold_Demo.woff") format("woff"), url("./fonts/Back_to_Black_Bold_Demo.ttf") format("truetype"), url("./fonts/Back_to_Black_Bold_Demo.svg#BacktoBlackBoldDemo") format("svg");
+  font-weight:normal;
+  font-style:normal;
+}
 *{
   margin: 0;
   padding: 0;
