--- a/src/pages/Kudi/Kudi.css
+++ b/src/pages/Kudi/Kudi.css
@@ -1,5 +1,8 @@
 .Section{
     background-color: var( --bg-c-primary);
-    min-height: 100vh;
     padding: 1.5rem 2.5rem;
+}
+.Main{
+    min-height: calc(100vh - 5.9375rem);
+    background-color: var(--bg-c-primary);
 }
