Favs filter done

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ html{
   --bg-c-secondary: #fff;
   --bg-c-tertiary: #9C27F7;
   --bg-c-tertiary-h: #B188E6;
+  --bg-c-cuaternary: #858585;
   --f-c-primary : #fff;
   --f-c-secondary : #000;
   --f-c-tertiary: #9C27F7;
