--- a/src/pages/FavList/FavList.css
+++ b/src/pages/FavList/FavList.css
@@ -1,8 +1,33 @@
+.Type-wrapper{
+    padding: 1.5rem 2.5rem;
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 1rem;
+}
+.Type-btn{
+    color: var(--f-c-primary);
+    background-color: var(--bg-c-cuaternary);
+    padding: .5rem 1.25rem;
+    border-radius: .5rem;
+    cursor: pointer;
+    transition: background-color .5 ease;
+}
+.Type-btn.isActive{
+    background-color: var(--bg-c-tertiary-h);
+}
+.Type-btn:hover{
+    background-color: var(--bg-c-tertiary-h);
+}
+.Favs{
+    display: none;
+}
+.Favs.isActive{
+    display: block;
+}
 .Favs-ul{
     display: grid;
-    grid-template-columns: repeat( auto-fit , minmax(280px , 1fr));
+    grid-template-columns: repeat( auto-fit , minmax(280px , max-content));
     gap: 2rem;
-
 }
 .Favs-li{
     border-radius: .25rem;
