--- a/src/pages/TvShows/TvShows.css
+++ b/src/pages/TvShows/TvShows.css
@@ -1,82 +1,5 @@
-.Movies-ul{
+.Tvshows-ul{
     display: grid;
     grid-template-columns: repeat( auto-fit , minmax(280px , 1fr));
     gap: 2rem;
-}
-.Movies-li{
-    border-radius: .25rem;
-    cursor: pointer;
-    transition: transform .3s ease;
-    position: relative;
-}
-.Movies-li:hover{
-    transform: scale(1.1);
-}
-.Movies-picture{
-    height: 100%;
-    border-radius: .25rem;
-    transition: filter .3s ease;
-}
-.Movies-img{
-    height: 100%;
-}
-.Movies-li:hover .Movies-picture{
-    filter: brightness(0.6);
-}
-.Movies-li:hover .Description-wrapper{
-    opacity: 1;
-    pointer-events: all;
-}
-.Description-wrapper{
-    padding: 1rem;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    opacity: 0;
-    pointer-events: none;
-    z-index: 1;
-    transform: rotateX(90deg);
-    transform-origin: bottom;
-    transition: transform .6s ease;
-}
-.Movies-li:hover .Description-wrapper{
-    transform: rotateX(0);
-}
-.Title-wrapper{
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 2rem;
-}
-.Movies-h3{
-    font-size: 1.0625rem;
-    margin: .5rem 0;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-.Imdb-wrapper{
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
-    align-items: center;
-    gap: .5rem;
-    font-weight: 600;
-}
-.Imdb-icon{
-    width: 2rem;
-    z-index: 2;
-    color: var(--f-c-secondary);
-}
-.Movies-span{
-    font-weight: 300;
-}
-.Movies-paragraph{
-    margin: .5rem 0 0;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-size: .875rem;
 }
