--- a/src/pages/Categories/Categories.css
+++ b/src/pages/Categories/Categories.css
@@ -1,37 +1,41 @@
-.Type-wrapper{
-    padding: 1.5rem 2.5rem;
-    display: flex;
-    flex-flow: row nowrap;
-    gap: 1rem;
-}
-.Type-btn{
-    color: var(--f-c-primary);
-    background-color: var(--bg-c-cuaternary);
-    padding: 1rem 1.5rem;
-    border-radius: .5rem;
-    cursor: pointer;
-    transition: background-color .5 ease;
-}
-.Type-btn.isActive{
-    background-color: var(--bg-c-tertiary-h);
-}
-.Type-btn:hover{
-    background-color: var(--bg-c-tertiary-h);
-}
-.Favs{
-    display: none;
-}
-.Favs.isActive{
-    display: block;
-}
-.Favs-ul{
+.Categories-ul{
     display: grid;
-    grid-template-columns: repeat( auto-fit , minmax(280px , max-content));
+    grid-template-columns: repeat( auto-fit , minmax(280px , 1fr));
     gap: 2rem;
 }
-.Favs-li{
-    border-radius: .25rem;
-    cursor: pointer;
-    transition: transform .3s ease;
+.Categories-li{
+    border-radius: .5rem;
     position: relative;
+    cursor: pointer;
+    transition: transform .5s ease;
+}
+.Categories-li:hover{
+    transform: scale(1.1);
+
+}
+.Categories-img{
+    border-radius: .5rem;
+    opacity: .7;
+    transition: opacity .5s ease;
+}
+.Categories-li:hover .Categories-img{
+    opacity: .4;
+}
+.Span-wrapper{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);      /*  En lugar de hacer el calculo con el font-size, se desplaza la mitad de si mismo para ajustar a centro */
+}
+.Categories-span{
+    text-transform: capitalize;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 600;
+    width: 100%;
 }
