Slider running at main

--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -1,4 +1,20 @@
-.Carrousel-container--btns{
+.Carrousel-container{
+    width: 100%;
+    overflow-x: hidden;
+}
+
+.Carrousel-ul{
+    width: 600%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    transition: transform 1.5s ease;
+}
+
+
+
+.Carrousel-btns{
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
