--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -7,10 +7,8 @@
 }
 .Carrousel-ul{
     width: 600%;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-around;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(6 , 1fr);
     gap: 2rem;
     transition: transform 1.5s ease;
 }
@@ -28,4 +26,8 @@
     background-color: var(--f-c-cuaternary);
     border-radius: 50%;
     cursor: pointer;
+}
+.Carrousel-btn.isActive{
+    background-color: var(--f-c-primary);
+
 }
