--- a/src/components/TvShowsLiLarge/TvShowsLiLarge.css
+++ b/src/components/TvShowsLiLarge/TvShowsLiLarge.css
@@ -22,11 +22,14 @@
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
-    align-items: flex-start;}
+    align-items: flex-start;
+}
 .TvshowsLarge-h3{
     font-size: 50px;
     font-weight: 600;
     margin: .5rem 0;
+    filter: drop-shadow(0px .5rem .5rem rgba(0, 0, 0, 0.5));
+
 }
 .Imdb-wrapper{
     display: flex;
@@ -49,4 +52,5 @@
     margin: .5rem 0 2rem;
     font-size: .875rem;
     width: 50%;
+    filter: drop-shadow(0px .5rem .5rem rgba(0, 0, 0, 0.5));
 }
