--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -29,5 +29,45 @@
 }
 .Carrousel-btn.isActive{
     background-color: var(--f-c-primary);
+}
+.Initials-ul{
+    display: grid;
+    grid-template-columns: repeat( auto-fit , minmax(280px , 1fr));
+    gap: 2rem;
+}
+.Initials-li{
+    border-radius: .5rem;
+    position: relative;
+    cursor: pointer;
+    transition: transform .5s ease;
+}
+.Initials-li:hover{
+    transform: scale(1.1);
 
+}
+.Initials-img{
+    border-radius: .5rem;
+    opacity: .7;
+    transition: opacity .5s ease;
+}
+.Initials-li:hover .Initials-img{
+    opacity: .4;
+}
+.Span-wrapper--initials{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);      /*  En lugar de hacer el calculo con el font-size, se desplaza la mitad de si mismo para ajustar a centro */
+}
+.Initials-span{
+    text-transform: capitalize;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 600;
+    width: 100%;
 }
