--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,7 @@ html{
   --bg-c-tertiary: #9C27F7;
   --bg-c-tertiary-h: #B188E6;
   --bg-c-cuaternary: #858585;
+  --bg-c-submenu: #33373D;
   --f-c-primary : #fff;
   --f-c-secondary : #000;
   --f-c-tertiary: #9C27F7;
@@ -69,3 +70,4 @@ body{
   font-size: 18px;
   font-weight: 700;
 }
+
