--- a/src/components/DeleteFavMovieBtn/DeleteFavMovieBtn.css
+++ b/src/components/DeleteFavMovieBtn/DeleteFavMovieBtn.css
@@ -10,6 +10,7 @@
     height: 1.6rem;
     padding: .2rem;
     cursor: pointer;
+    z-index: 2;
 }
 .DeleteFav-btn:hover{
     background-color: var(--f-c-error);
