--- a/src/components/DeleteFavMovieBtn/DeleteFavMovieBtn.css
+++ b/src/components/DeleteFavMovieBtn/DeleteFavMovieBtn.css
@@ -15,6 +15,9 @@
 .DeleteFav-btn:hover{
     background-color: var(--f-c-error);
 }
+.DeleteFav-svg{
+    width: 1rem;
+}
 .Movies-li:hover .DeleteFav-btn{
     opacity: 1;
     pointer-events: all;
