--- a/src/components/DeleteFavTvshowBtn/DeleteFavTvshowBtn.css
+++ b/src/components/DeleteFavTvshowBtn/DeleteFavTvshowBtn.css
@@ -14,6 +14,9 @@
 .DeleteFav-btn:hover{
     background-color: var(--f-c-error);
 }
+.DeleteFav-svg{
+    width: 1rem;
+}
 .Tvshows-li:hover .DeleteFav-btn{
     opacity: 1;
     pointer-events: all;
