--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -95,3 +95,25 @@
     border-radius: 2px;
     font-size: .75rem;
 }
+@media(max-width:720px){
+    .Header-nav{
+        width: 100%;
+        order: 2;
+    }
+}
+@media(max-width:530px){
+    .Header-wrapper{
+        padding: 1.625rem 1.25rem;
+    }
+    .Nav{
+        font-size: .9rem;
+        margin: .5rem 0 0;
+        justify-content: space-between;
+        gap: .5rem;
+    }
+}
+@media(max-width:360px){
+    .Header-wrapper{
+        padding: 1.625rem .5rem;
+    }
+}
