--- a/src/components/TvShowsLiLarge/TvShowsLiLarge.css
+++ b/src/components/TvShowsLiLarge/TvShowsLiLarge.css
@@ -25,7 +25,7 @@
     align-items: flex-start;
 }
 .TvshowsLarge-h3{
-    font-size: 50px;
+    font-size: 3.125rem;
     font-weight: 600;
     margin: .5rem 0;
     filter: drop-shadow(0px .5rem .5rem rgba(0, 0, 0, 0.5));
@@ -51,6 +51,45 @@
 .TvshowsLarge-paragraph{
     margin: .5rem 0 2rem;
     font-size: .875rem;
-    width: 50%;
+    width: 60%;
     filter: drop-shadow(0px .5rem .5rem rgba(0, 0, 0, 0.5));
+}
+@media(max-width:976px){
+    .TvshowsLarge-paragraph{
+        font-size: .75rem;
+        width: 65%;
+    }
+    .TvshowsLarge-h3{
+        font-size: 2rem;
+        font-weight: 600;
+        margin: .5rem 0;
+        filter: drop-shadow(0px .5rem .5rem rgba(0, 0, 0, 0.5));
+    }
+}
+@media(max-width:850px){
+    .TvshowsLarge-paragraph{
+        text-wrap: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
+@media(max-width:685px){
+    .TvshowsLarge-paragraph{
+        display: none;
+    }
+    .TvshowsLarge-h3{
+        width: 100%;
+        text-wrap: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
+@media(max-width:470px){
+    .TvshowsLarge-h3{
+       font-size: 1.5rem;
+    }
+    .Imdb-wrapper{
+        display: none;
+    }
+   
 }
