--- a/src/components/TvShowsLi/TvShowsLi.css
+++ b/src/components/TvShowsLi/TvShowsLi.css
@@ -75,11 +75,11 @@
     text-overflow: ellipsis;
     font-size: .875rem;
 }
-@media(max-width:475px){
-    .Movies-li:hover .Movies-picture{
+@media(max-width:685px){
+    .Tvshows-li:hover .Tvshows-picture{
         filter: none;
     }
-    .Movies-li:hover .Description-wrapper{
+    .Tvshows-li:hover .Description-wrapper{
         opacity: 0;
         pointer-events: none;
     }
