--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,22 @@
 .DeleteFav-svg{
     width: 1rem;
 }
+.Info-chevron{
+    position: absolute;
+    bottom: 0;
+    left: calc((50% - 3.5rem));
+    width: 7rem;
+    animation: bounce 2s linear infinite;
+    cursor: pointer;
+    filter: drop-shadow(0px .5rem .5rem rgba(0, 0, 0, 0.5));
+}
+@media(max-width:720px){
+    .Info-chevron{
+        width: 3.5rem;
+        right: 1rem;
+        left: initial
+    }
+}
 @media(max-width:685px){
     .DeleteFav-btn{
         opacity: 1;
@@ -95,3 +111,18 @@
     }
 }
 
+@keyframes bounce {
+    0%,
+    25%,
+    50%,
+    75%,
+    100% {
+        transform: translateY(0);
+    }
+    35% {
+        transform: translateY(1.8rem);
+    }
+    65% {
+        transform: translateY(.8rem);
+    }
+}
