--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,7 @@ body{
   margin: 0 0 1.5rem;
 }
 .H3{
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 700;
 }
 @media(max-width:530px){
