--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@
     width: 7rem;
     animation: bounce 2s linear infinite;
     cursor: pointer;
-    filter: drop-shadow(0px .5rem .5rem rgba(0, 0, 0, 0.5));
+    filter: drop-shadow(0 .5rem .5rem rgba(0, 0, 0, 0.5));
 }
 @media(max-width:720px){
     .Info-chevron{
