--- a/src/components/StartBtn/StartBtn.css
+++ b/src/components/StartBtn/StartBtn.css
@@ -7,8 +7,8 @@
     color: var(--f-c-primary);
     background-color: var(--bg-c-tertiary);
     padding: .625rem 1rem;
-    border-radius: 8px;
-    font-size: 14px;
+    border-radius: .5rem;
+    font-size: .875rem;
     cursor: pointer;
 }
 .Btn-play--svg{
