--- a/src/components/TvShowsLiLarge/TvShowsLiLarge.css
+++ b/src/components/TvShowsLiLarge/TvShowsLiLarge.css
@@ -28,7 +28,7 @@
     font-size: 3.125rem;
     font-weight: 600;
     margin: .5rem 0;
-    filter: drop-shadow(0px .5rem .5rem rgba(0, 0, 0, 0.5));
+    filter: drop-shadow(0 .5rem .5rem rgba(0, 0, 0, 0.5));
 
 }
 .Imdb-wrapper{
@@ -51,7 +51,7 @@
     margin: .5rem 0 2rem;
     font-size: .875rem;
     width: 60%;
-    filter: drop-shadow(0px .5rem .5rem rgba(0, 0, 0, 0.5));
+    filter: drop-shadow(0 .5rem .5rem rgba(0, 0, 0, 0.5));
 }
 @media(max-width:976px){
     .TvshowsLarge-paragraph{
@@ -62,7 +62,7 @@
         font-size: 2rem;
         font-weight: 600;
         margin: .5rem 0;
-        filter: drop-shadow(0px .5rem .5rem rgba(0, 0, 0, 0.5));
+        filter: drop-shadow(0 .5rem .5rem rgba(0, 0, 0, 0.5));
     }
 }
 @media(max-width:850px){
