--- a/src/pages/Play/Play.css
+++ b/src/pages/Play/Play.css
@@ -47,7 +47,7 @@
     width: var(--size-orbe);
     height: var(--size-orbe);
     background-color: var(--bg-c-tertiary);
-    box-shadow: 0px 0px 20px 2px var(--bg-c-tertiary);
+    box-shadow: 0 0 1.25rem .125rem var(--bg-c-tertiary);
     border-radius: 50%;
   }
   
