--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -1,6 +1,6 @@
-.Login{
+.Signup{
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -10,6 +10,10 @@
 .Form-wrapper{
     background-color: var(--bg-c-primary);
     padding: 2rem;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 .Form-h2{
     font-size: 1.5rem;
@@ -17,11 +21,11 @@
 }
 .Signup-form{
     padding: 2rem 0;
-    min-width: 15vw;
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
     align-items: flex-start;
+    width: 100%;
 }
 .Signup-label{
     margin: 1rem 0 .3125rem;
@@ -55,7 +59,7 @@
     background-color: var(--bg-c-tertiary);
     color: var(--f-c-primary);
     width: 100%;
-    padding: .5rem 5rem;
+    padding: .5rem .5rem;
     border-radius: .5rem;
     cursor: pointer;
     transition: background-color .5s ease;
@@ -84,12 +88,40 @@
 }
 .Login-picture{
     height: 100%;
-}
-.Login-img{
-    object-fit: cover;
-    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
+}
+.Login-img{
+    object-fit: cover;
+    height: 100%;
+}
+@media(max-width:530px){
+    .Signup-form{
+        padding: 1rem 0;
+    }
+    .Signup-label{
+        font-size: .9rem;
+    }
+    .Signup-submit{
+        font-size: .9rem;
+    }
+    .Signup-span{
+        font-size: .9rem;
+    }
+    .Login-btn{
+        font-size: .9rem;
+    }
+    .Error{
+        font-size: .9rem;
+    }
+}
+@media(max-width:440px){
+    .Form-wrapper{
+        width: 100%;
+    }
+    .Error{
+        font-size: .8rem;
+    }
 }
