--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,10 +1,10 @@
 .Login{
     width: 100%;
-    height: 100vh;
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 .Form-wrapper{
     background-color: var(--bg-c-primary);
@@ -13,6 +13,10 @@
     flex-flow: column nowrap;
     justify-content: flex-start;
     align-items: flex-start;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
 }
 .Form-h2{
     font-size: 1.5rem;
@@ -79,17 +83,22 @@
     color: var(--f-c-primary);
     cursor: pointer;
 }
-
 .Login-picture{
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
+    height: 100vh;
 }
 .Login-img{
     object-fit: cover;
     height: 100%;
+}
+@media(max-width:630px){
+    .Error{
+        font-size: .8rem;
+    }
+}
+@media(max-width:540px){
+    .Form-wrapper{
+        width: 100%;
+    }
 }
 @media(max-width:440px){
     .Login-form{
@@ -107,15 +116,5 @@
     .Login-btn{
         font-size: .9rem;
     }
-    .Error{
-        font-size: .9rem;
-    }
-}
-@media(max-width:375px){
-    .Form-wrapper{
-        width: 100%;
-    }
-    .Error{
-        font-size: .8rem;
-    }
+    
 }
