--- a/src/pages/FavList/FavList.css
+++ b/src/pages/FavList/FavList.css
@@ -3,6 +3,11 @@
 }
 .Favs.isActive{
     display: block;
+}.Favs-ul{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    align-items: center;
 }
 .Favs-li{
     border-radius: .25rem;
