--- a/src/components/CloseBtn/CloseBtn.css
+++ b/src/components/CloseBtn/CloseBtn.css
@@ -3,3 +3,9 @@
     right: 2rem;
     top: 2rem;
 }
+@media(max-width:475px){
+    .Close-btn{
+        right: 2rem;
+        top: 3.5rem;
+    }
+}
