--- a/src/components/PlayStats/PlayStats.css
+++ b/src/components/PlayStats/PlayStats.css
@@ -1,8 +1,9 @@
 .Play-stats{
     position: absolute;
-    bottom: 1.5rem;
-    left: 1.5rem;
+    bottom: 0;
+    left: 0;
     width: 100%;
+    padding: 0 1.5rem;
 }
 .Svg-wrapper{
     display: flex;
@@ -14,7 +15,7 @@
 .Svg-wrapper::after{
     content: "";
     display: flex;
-    width: 90%;
+    width: 100%;
     height: 2px;
     background-color: white;
 }
